166/ Added in common texture call "Wave".
167/ Added Low RAM mode config.
168/ Deleted image structure loader due to being inefficient and outdated.
169/ Deleted Lost Acc missing texture sprite.
170/ Deleted MeleeMageHybridDamageClass due to it is not being used.
171/ Deleted "RangeWeaponOverhaul" file because it is no longer needed.
172/ Deleted Path finding system because it is not being used.
173/ Clean up the entire mod.
174/ Deleted MeleeRangerHybridDamageClass due to it is not really fitting.
175/ Changed Laser Sniper damage type from MagicRanger Hybrid to Ranger.
176/ Changed Magic Bow damage type from MagicRanger hybrid to Magic.
177/ Changed The Burning Sky damage type from MagicRanger hybrid to Ranger.
178/ Changed MoonStarBow damage type from MagicRanger hybrid to Magic.
179/ Deleted RangeMageHybridDamageClass because it is too OP.
180/ Deleted Mysterious Potion file because it is no longer used.
181/ Added Damage Up Relic Set ( which act more of a additional prefix ).
182/ Change how Relic Set name is formatted.
183/ Changing fixed hardcoded localization key to universal one for easier time to manage.
184/ Make it no longer neccessary to calculate tier up value from relic in Effect method.
185/ Implemented new change to relic and also adjusted Relic RNG.
186/ Deleted Triple Debuff Template because the condition for the template is too difficult.
187/ Deleted CombatV4Template template because it is too bloated.
188/ Update World generation to add in many mini forest
189/ Changed relic set activation condition.
190/ Added Defenses Up relic set.
191/ Reworked Minishark.
192/ Added Cursed Kingdom from ModJam2 mod.
193/ Renamed ModAchievement system to RoguelikeAchievement
194/ Simplified the functionality of PlayerStatsHandler.AddStatsToPlayer
195/ Lead Irradiation now have effect on player.
196/ Work on some localization of the mod.
197/ A lot of fixes and patched on world biome handler.
198/ Better Keen potion buff check.