@@ -1,1 +1,7 @@
-BETA TEST
+"Welcome back, I have been waiting for you...Now, shall we venture in ?"
+
+Everlasting is a mod central around roguelike, exploration, and much more ! Most of what you know in terraria is not the same with this mod.
+This is a whole standalone mod but using Tmodloader API as a way to make it easily accessible to most player. It is highly recommend to not play this mod with other mod.
+Multiplayer doesn't works, unless there are extremely high demand for it along with the support that we need, there won't be any plans to make multiplayer playable.
+This mod bring entirely new whole experiences that never seen before in terraria modding, new systems to play around, new weapons to look for and craft, and so much secrets waiting to be discovered !
+Completed vanilla items overhaul, from just visual to new functionality, you maybe shocked what we did to copper shortsword !
