@@ -198,3 +198,6 @@ Version 0.0.1:
 196/ Work on some localization of the mod.
 197/ A lot of fixes and patched on world biome handler.
 198/ Better Keen potion buff check.
+199/ Deleted Altar tile due to no longer needing it.
+200/ Update the mod's description.
+201/ Patched up Update World Inner method
